--- a/.github/workflows/pytestPerf.yml
+++ b/.github/workflows/pytestPerf.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        debian-version: ["11", "12"]
+        debian-version: ["12"]
         include:
           # - debian-version: "11"
           #   python-version: "3.9"
@@ -27,8 +27,8 @@ jobs:
           #   postgis-version: "3.2"
           - debian-version: "12"
             python-version: "3.11"
-            postgres-version: "15"
-            postgis-version: "3.3"
+            postgres-version: "16"
+            postgis-version: "3.4"
 
     name: Debian ${{ matrix.debian-version }}
 
