--- a/.github/workflows/pytestPerf.yml
+++ b/.github/workflows/pytestPerf.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        debian-version: ["12"]
+        debian-version: ["11", "12"]
         include:
           # - debian-version: "11"
           #   python-version: "3.9"
@@ -27,8 +27,8 @@ jobs:
           #   postgis-version: "3.2"
           - debian-version: "12"
             python-version: "3.11"
-            postgres-version: "16"
-            postgis-version: "3.4"
+            postgres-version: "15"
+            postgis-version: "3.3"
 
     name: Debian ${{ matrix.debian-version }}
 
@@ -90,20 +90,28 @@ jobs:
           GEONATURE_CONFIG_FILE: config/test_config.toml
       - name: Install database
         run: |
-          wget https://geonature.fr/data/2024-02-GeoNature-Backup-Synthese-9000
-          pg_restore -U geonatadmin -d geonature2db -1 2024-02-GeoNature-Backup-Synthese-9000
+          wget https://www.dropbox.com/scl/fi/17gsthsftfg59mxwmbbre/export_geonature_10000.zip\?rlkey\=33choleag4xw60wadm802c3oh\&dl\=1 -O export_geonature_10000.zip
+          unzip export_geonature_10000.zip
+          ls
+          psql -h localhost -U geonatadmin -d geonature2db -f test.sql
         env:
           PGPASSWORD: geonatpasswd
-      - name: Show database status
+      - name: Install module import
         run: |
-          geonature db status
-        env:
-          GEONATURE_CONFIG_FILE: config/test_config.toml
+          wget https://github.com/PnX-SI/gn_module_import/archive/refs/heads/develop.zip
+          unzip develop.zip
+          cd gn_module_import-develop
+          pip install -e .
       - name: Install core modules backend
         run: |
           pip install -e contrib/occtax
           pip install -e contrib/gn_module_occhab
           pip install -e contrib/gn_module_validation
+      - name: Show database status
+        run: |
+          geonature db status
+        env:
+          GEONATURE_CONFIG_FILE: config/test_config.toml
       - name: Install core modules database
         run: |
           geonature upgrade-modules-db
