--- a/.github/workflows/pytestPerf.yml
+++ b/.github/workflows/pytestPerf.yml
@@ -21,10 +21,10 @@ jobs:
       matrix:
         debian-version: ["11", "12"]
         include:
-          # - debian-version: "11"
-          #   python-version: "3.9"
-          #   postgres-version: "13"
-          #   postgis-version: "3.2"
+          - debian-version: "11"
+            python-version: "3.9"
+            postgres-version: "13"
+            postgis-version: "3.2"
           - debian-version: "12"
             python-version: "3.11"
             postgres-version: "15"
