--- a/.github/workflows/eval_perf.yml
+++ b/.github/workflows/eval_perf.yml
@@ -90,10 +90,10 @@ jobs:
           GEONATURE_CONFIG_FILE: config/test_config.toml
       - name: Restore database
         run: |
-          curl https://www.dropbox.com/scl/fi/jvdjshw0azixurzgjyr20/100kDump.zip?rlkey=4nt2bjc4rqg868frt3tjbwz0w&dl=1 -O 100kDump.zip
-          unzip 100kDump.zip
+          wget https://www.dropbox.com/scl/fi/17gsthsftfg59mxwmbbre/export_geonature_10000.zip?rlkey=33choleag4xw60wadm802c3oh&dl=1 -O 10kDump.zip
+          unzip 10kDump.zip
           ls
-          psql -h localhost -U geonatadmin -d geonature2db -f 100kDump
+          psql -h localhost -U geonatadmin -d geonature2db -f test.sql
         env:
           PGPASSWORD: geonatpasswd
       - name: Install module import
