now the perf ci is manually runnable

--- a/.github/workflows/eval_perf.yml
+++ b/.github/workflows/eval_perf.yml
@@ -1,16 +1,7 @@
 name: Routes performance evaluation
 
 on:
-  push:
-    branches:
-      - master
-      - hotfixes
-      - develop
-  pull_request:
-    branches:
-      - master
-      - hotfixes
-      - develop
+  workflow_dispatch:
 
 jobs:
   build:
